chore: Add constant and method to envision helper